<resources>
    <string name="app_name">Event Hub</string>
    <string name="action_settings">Settings</string>
    <string name="addEventTitle">Add New Event</string>
    <string name="deleteEventTitle">Delete Event</string>
    <string name="eventTitle">Event title</string>
    <string name="dateBtn">Add Date</string>
    <string name="addEventBlurb">After adding the event, tap on it to add more details!</string>
    <string name="newEventBtn"> SAVE EVENT</string>
    <string name="newEventError">New event must have a title</string>
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remove">DELETE</string>
    <string name="removed">Event deleted</string>
    <string name="confirm">Confirm</string>
    <string name="deleteDialog">Are you sure you want to delete this event?</string>
    <string name="addEventDialog">Are you sure you want to add this event?</string>
    <string name="addVenue">Select a venue</string>
    <string name="openMaps">Get directions to venue</string>
    <string name="editDate">EDIT DATE</string>
    <string name="editVenue">EDIT VENUE</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="searchEventText">Search Ticketmaster for an event</string>
    <string name="searchResults">Tap result to add to your Event Hub:</string>
    <string name="enterCity">City</string>
    <string name="searchHint">Enter a keyword</string>
    <string name="eventDetails">Event Details:</string>
    <string name="noResultMsg">No results!</string>
    <string name="quickAdd">Quick Add</string>
    <string name="quickAddTitle">Quick add new event</string>
    <string name="addTicketmaster">Search Ticketmaster</string>
    <string name="swipeMessage">Swipe LEFT on an event to delete</string>
    <string name="mapsError">Select a venue first</string>
    <string name="dateConfirm">Date saved successfully</string>
    <string name="venueConfirm">Venue save successfully</string>
    <string name="venueError">Error saving venue, try again</string>
    <string name="eventAddConfirm">Event saved successfully</string>
    <string name="imageURL">Event image URL</string>
    <string name="errorSignIn">Enter a value</string>
    <string name="noInternetMsg">Check your internet connection</string>
    <string name="dbErrorMsg">We couldn\'t retrieve your events</string>
    <string name="noEventsMsg">No events! Tap below to add one…</string>
    <string name="startsToday">Starts: TODAY!</string>
    <string name="eventPassed">Passed</string>
    <string name="tryAgain">TRY AGAIN</string>
    <string name="openUrl">View ticket details website</string>
    <string name="eventType">Event Type</string>
    <string name="chooseType">Select an event type</string>
    <string name="eventTomorrow">Starts: 1 day</string>

    <!-- ImageView descriptions -->
    <string name="signInBgDescription">Sign in page background image</string>
    <string name="ticketmasterDescription">Ticketmaster logo</string>
    <string name="alreadyExists">Event already exists in your Event Hub!</string>
    <string name="delete_event_button">Delete event button</string>
    <string name="menu_refresh">Refresh</string>
    <string name="eventImageDesc">Event image</string>
    <string name="card_menu">Card menu</string>
    <string name="card_thumb">Event thumbnail image</string>

    <!-- Spinner values - event type -->
    <string-array name="eventTypesArray">
        <item>All</item>
        <item>Music</item>
        <item>Arts &amp; Theatre</item>
        <item>Sports</item>
        <item>Film</item>
        <item>Family</item>
        <item>Misc</item>
    </string-array>

</resources>
