<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/eventDetailsBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:text="@string/app_name"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:id="@+id/profileImage"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/empty_profile" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/login_bg"
            android:contentDescription="@string/eventImageDesc" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="1dp"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/dateDetails">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_today_black_24dp"/>

                <TextView
                    android:id="@+id/dateTxt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:gravity="center_vertical"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/venueDetails">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top"
                    android:src="@drawable/ic_location_on_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/venueTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:gravity="center_vertical"
                        android:text="@string/addVenue"/>

                    <TextView
                        android:id="@+id/venueAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"
                        android:text=""/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:id="@+id/ticketDetails">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_directions_black_24dp"/>

                <TextView
                    android:id="@+id/openMapsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingBottom="@dimen/search_margin"
                    android:textColor="@android:color/black"
                    android:text="@string/openMaps"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/ticketmasterLogo"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/ticketmaster_blue_png"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>