<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventSearchActivity"
    android:background="@color/eventDetailsBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:text="@string/app_name"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:id="@+id/profileImage"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/empty_profile" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/citySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="30"
        android:lines="1"
        android:singleLine="true"
        android:inputType="textCapWords"
        android:hint="@string/enterCity"
        android:textColor="@color/black"
        android:paddingEnd="@dimen/search_margin"
        android:paddingStart="@dimen/search_margin"/>

    <SearchView
        android:id="@+id/keywordSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:queryHint="@string/searchHint"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="12dp"
        card_view:cardCornerRadius="1dp"
        android:layout_marginTop="8dp"
        android:layout_margin="@dimen/search_margin"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchResults"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:id="@+id/searchResult0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/resultTitle0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/searchResultTitle" />

                <TextView
                    android:id="@+id/resultVenue0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/resultDate0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/linebreak0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/searchResult1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/resultTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/searchResultTitle" />

                <TextView
                    android:id="@+id/resultVenue1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/resultDate1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/linebreak1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/searchResult2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/resultTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/searchResultTitle" />

                <TextView
                    android:id="@+id/resultVenue2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:id="@+id/resultDate2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ticketmasterLogo"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ticketmaster_blue_png"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>